--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-image: url(bg.jpg);
     background-size: cover;
     background-position: top center;
